Changelog
=========

1.3.8 - unreleased
------------------

- INTRANETT-274: Hide quick upload portlet if neither images nor files can be
  added in the current folder and enable quick upload portlet inside personal
  folders.

- INTRANETT-270: Fixed failure to create groups.

- INTRANETT-272: Remove KSS to fix problems in Internet Explorer.

1.3.7 - 2011-10-04
------------------

- Add Plone Hotfix 20110928.

1.3.6 - 2011-10-04
------------------

- Add Zope hotfix CVE 2011-3587.

1.3.5 - 2011-10-03
------------------

- Add a `system-info` view to provide structured information about the
  installed software version.

1.3.4 - 2011-10-03
------------------

- Drop the color stripe.

- Integrate Zendesk support widget.

- INTRANETT-209: Setup XMPP for jarn.intranett.no.

- INTRANETT-229: Provide Amberjack based tutorials.

- INTRANETT-253: Add quick file and image upload feature.

- Fix styling of search box in related items dialog.

- INTRANETT-254: Fix logo title to use the site title.

1.3.3 - 2011-09-09
------------------

- INTRANETT-224: Add default content.

- Update to distribute = 0.6.21.

- INTRANETT-248: Translate subject of welcome mail to Norwegian.

1.3.2 - 2011-09-03
------------------

- Changed authentication cookies to have a timeout instead of being browser
  session based.

- Update to latest Chameleon, Zope 2 and ZTK releases.

- Optimize login form to avoid JavaScript, `spinner.gif` and KSS resources.

- Modified login procedure to skip the `login_success` page.

- Enable Chameleon template engine.

- Disable haproxy application sessions.

- Disable debug HTTP headers by default.

- Set gzip compression level to 7.

- Disable SSLv2 in Nginx and disable ephemeral Diffie-Hellman SSL ciphers.

- INTRANETT-250: Use a textual logo if no customer logo can be found.

- Add back BTree enhancements via `experimental.btree`.

- Implement new `init.d` service start/stop approach following
  http://gocept.net/doc/tutorials/userinit.html
