@@ -4,6 +4,9 @@ Changelog
 1.3.8 - unreleased
 ------------------
 
+- Internal: Expand system-info view to print out statistics on number of users,
+  content items and modified items.
+
 - INTRANETT-274: Hide quick upload portlet if neither images nor files can be
   added in the current folder and enable quick upload portlet inside personal
   folders.
